--- a/app/src/main/res/layout/activity_login.xml
+++ b/app/src/main/res/layout/activity_login.xml
@@ -16,7 +16,7 @@
         android:textColor="@color/colorWhite"
         android:textStyle="bold"
         android:visibility="gone"
-        android:textSize="24dp"
+        android:textSize="24sp"
         android:layout_height="wrap_content">
     </TextView>
 
@@ -24,16 +24,20 @@
         android:id="@+id/loginEmail"
         android:layout_width="match_parent"
         android:layout_marginTop="40dp"
-        android:textSize="24dp"
-        android:layout_height="wrap_content">
+        android:textSize="24sp"
+        android:layout_height="wrap_content"
+        android:inputType="textEmailAddress"
+        android:importantForAutofill="no">
     </EditText>
 
     <EditText
         android:id="@+id/loginPass"
         android:layout_width="match_parent"
         android:layout_marginTop="40dp"
-        android:textSize="24dp"
-        android:layout_height="wrap_content">
+        android:textSize="24sp"
+        android:layout_height="wrap_content"
+        android:inputType="text"
+        android:importantForAutofill="no">
     </EditText>
 
     <Button
@@ -48,7 +52,7 @@
         android:textSize="18sp"
         android:textColor="@color/colorWhite"
         android:textStyle="bold"
-        android:text="Login">
+        android:text="@string/login_btn">
     </Button>
 
     <Button
@@ -63,7 +67,7 @@
         android:textSize="18sp"
         android:textColor="@color/colorWhite"
         android:textStyle="bold"
-        android:text="Register">
+        android:text="@string/register_btn">
     </Button>
 
 </LinearLayout>
