commented on xml files

--- a/app/src/main/res/layout/activity_advertisement.xml
+++ b/app/src/main/res/layout/activity_advertisement.xml
@@ -1,5 +1,4 @@
 <?xml version="1.0" encoding="utf-8"?>
-
 <LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:app="http://schemas.android.com/apk/res-auto"
     xmlns:tools="http://schemas.android.com/tools"
@@ -8,6 +7,8 @@
     android:background="#e6ecff"
     android:orientation="vertical"
     tools:context=".activity.advertisement.Advertisement">
+
+    <!-- Manuka -->
 
     <include
         android:id="@+id/toolbar"
