--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -9,6 +9,7 @@
        android:id="@+id/toolbar"
        ></include>
 
+   <!-- Manuka -->
 
    <FrameLayout
        android:id="@+id/navContainer"
