--- a/app/src/main/res/layout/activity_place_order.xml
+++ b/app/src/main/res/layout/activity_place_order.xml
@@ -9,6 +9,8 @@
     tools:context=".activity.advertisement.PlaceOrder"
     tools:ignore="LabelFor">
 
+    <!-- Manuka -->
+
     <include
         android:id="@+id/toolbar"
         layout="@layout/toolbar"></include>
