--- a/app/src/main/res/layout/ad_menu.xml
+++ b/app/src/main/res/layout/ad_menu.xml
@@ -5,6 +5,8 @@
     android:layout_height="wrap_content"
     android:maxHeight="360dp">
 
+    <!-- Manuka -->
+
     <androidx.cardview.widget.CardView
         android:layout_width="match_parent"
         android:layout_height="match_parent"
