--- a/app/src/main/res/layout/toolbar.xml
+++ b/app/src/main/res/layout/toolbar.xml
@@ -8,5 +8,5 @@
     android:paddingBottom="10dp"
     android:theme="@style/ThemeOverlay.AppCompat.Dark.ActionBar"
     app:popupTheme="@style/ThemeOverlay.AppCompat.Light">
-
+    <!-- Manuka -->
 </androidx.appcompat.widget.Toolbar>
