--- a/app/src/main/res/layout/activity_new_advertisement.xml
+++ b/app/src/main/res/layout/activity_new_advertisement.xml
@@ -7,6 +7,8 @@
     android:orientation="vertical"
     tools:context=".activity.advertisement.NewAdvertisement">
 
+    <!-- Manuka -->
+
     <include
         android:id="@+id/toolbar"
         layout="@layout/toolbar"></include>
