--- a/app/src/main/res/layout/ads_row.xml
+++ b/app/src/main/res/layout/ads_row.xml
@@ -8,6 +8,8 @@
     android:layout_height="wrap_content"
     android:layout_width="match_parent">
 
+    <!-- Manuka -->
+
     <LinearLayout
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
