--- a/app/src/main/res/layout/catergory_row.xml
+++ b/app/src/main/res/layout/catergory_row.xml
@@ -4,6 +4,8 @@
     android:layout_width="match_parent"
     android:layout_height="80dp">
 
+    <!-- Manuka -->
+
     <ImageView
         android:id="@+id/categoryImagePost"
         android:paddingTop="20dp"
