--- a/app/src/main/res/layout/fragment_account.xml
+++ b/app/src/main/res/layout/fragment_account.xml
@@ -5,6 +5,8 @@
     android:layout_height="match_parent"
     android:background="#e6ecff">
 
+    <!-- Manuka -->
+
     <LinearLayout
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
