--- a/app/src/main/res/layout/fragment_chat.xml
+++ b/app/src/main/res/layout/fragment_chat.xml
@@ -6,6 +6,8 @@
     android:background="@color/colorHome"
     tools:context=".fragment.Chat">
 
+    <!-- Manuka -->
+
     <!-- TODO: Update blank fragment layout -->
     <TextView
         android:layout_width="match_parent"
