--- a/app/src/main/res/layout/fragment_new_post.xml
+++ b/app/src/main/res/layout/fragment_new_post.xml
@@ -8,6 +8,8 @@
     android:orientation="vertical"
     tools:context=".fragment.NewPost">
 
+    <!-- Manuka -->
+
     <androidx.core.widget.NestedScrollView
         android:layout_width="wrap_content"
         android:layout_height="wrap_content">
