--- a/app/src/main/res/layout/order_layout_three.xml
+++ b/app/src/main/res/layout/order_layout_three.xml
@@ -8,6 +8,8 @@
     android:gravity="center"
     android:background="@color/colorWhite">
 
+    <!-- Manuka -->
+
     <ImageView
         android:layout_marginTop="20dp"
         android:layout_width="40dp"
