--- a/app/src/main/res/layout/order_layout_two.xml
+++ b/app/src/main/res/layout/order_layout_two.xml
@@ -6,6 +6,8 @@
     android:orientation="vertical"
     android:background="@color/colorHome">
 
+    <!-- Manuka -->
+
     <LinearLayout
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
