--- a/app/src/main/res/menu/favourite.xml
+++ b/app/src/main/res/menu/favourite.xml
@@ -3,6 +3,8 @@
     xmlns:app="http://schemas.android.com/apk/res-auto"
     xmlns:tools="http://schemas.android.com/tools">
 
+    <!-- Manuka -->
+
     <item
         android:id="@+id/action_share"
         android:orderInCategory="300"
