--- a/app/src/main/res/values/colors.xml
+++ b/app/src/main/res/values/colors.xml
@@ -1,5 +1,7 @@
 <?xml version="1.0" encoding="utf-8"?>
 <resources>
+
+    <!-- Manuka -->
     <color name="colorPrimary">#6200EE</color>
     <color name="colorPrimaryDark">#3700B3</color>
     <color name="colorAccent">#03DAC5</color>
@@ -10,4 +12,13 @@
     <color name="colorWarning">#ffe066</color>
     <color name="colorHome">#e6ecff</color>
     <color name="colorGreen">#00a884</color>
+
+    <!-- Divya -->
+
+
+    <!-- Ravindu -->
+
+
+    <!-- Ashan -->
+
 </resources>
