--- a/app/src/main/res/layout/activity_advertisement.xml
+++ b/app/src/main/res/layout/activity_advertisement.xml
@@ -51,6 +51,7 @@
                     android:text="@string/adBuynow"
                     android:textColor="@color/colorWhite"
                     android:textSize="18sp"
+                    android:onClick="onClick"
                     android:textStyle="bold"></Button>
 
                 <LinearLayout
@@ -103,6 +104,7 @@
                             android:layout_width="wrap_content"
                             android:layout_height="wrap_content"
                             android:layout_marginTop="6dp"
+                            android:layout_marginEnd="8dp"
                             android:text="@string/adLocation"
                             android:textColor="@color/colorBlack"
                             android:textSize="16sp"
@@ -129,6 +131,7 @@
                             android:layout_width="wrap_content"
                             android:layout_height="wrap_content"
                             android:layout_marginTop="6dp"
+                            android:layout_marginEnd="8dp"
                             android:text="@string/adCondition"
                             android:textColor="@color/colorBlack"
                             android:textSize="16sp"
@@ -155,6 +158,7 @@
                             android:layout_width="wrap_content"
                             android:layout_height="wrap_content"
                             android:layout_marginTop="6dp"
+                            android:layout_marginEnd="8dp"
                             android:text="@string/adCategory"
                             android:textColor="@color/colorBlack"
                             android:textSize="16sp"
@@ -181,6 +185,7 @@
                             android:layout_width="wrap_content"
                             android:layout_height="wrap_content"
                             android:layout_marginTop="6dp"
+                            android:layout_marginEnd="8dp"
                             android:text="@string/adPosted"
                             android:textColor="@color/colorBlack"
                             android:textSize="16sp"
@@ -249,6 +254,7 @@
             android:background="@color/colorGreen"
             android:text="@string/adCall"
             android:textAllCaps="false"
+            android:onClick="onClick"
             android:textColor="@color/colorWhite"></Button>
 
         <Button
@@ -260,6 +266,7 @@
             android:background="@color/colorGreen"
             android:text="@string/adChat"
             android:textAllCaps="false"
+            android:onClick="onClick"
             android:textColor="@color/colorWhite"></Button>
 
     </LinearLayout>
