--- a/app/src/main/res/values/preloaded_fonts.xml
+++ b/app/src/main/res/values/preloaded_fonts.xml
@@ -2,6 +2,9 @@
 <resources>
     <array name="preloaded_fonts" translatable="false">
         <item>@font/</item>
+        <item>@font/arvo</item>
+        <item>@font/belgrano</item>
+        <item>@font/candal</item>
         <item>@font/carme</item>
         <item>@font/droid_sans</item>
         <item>@font/pt_serif</item>
