--- a/app/src/main/res/layout/ad_menu.xml
+++ b/app/src/main/res/layout/ad_menu.xml
@@ -9,14 +9,14 @@
 
     <androidx.cardview.widget.CardView
         android:layout_width="match_parent"
-        android:layout_height="match_parent"
+        android:layout_height="wrap_content"
         app:cardCornerRadius="10dp"
         app:cardElevation="9dp"
         app:cardUseCompatPadding="true">
 
         <LinearLayout
             android:layout_width="match_parent"
-            android:layout_height="match_parent"
+            android:layout_height="wrap_content"
             android:orientation="vertical">
 
             <RelativeLayout
@@ -26,7 +26,7 @@
             <ImageView
                 android:id="@+id/adMenuImage"
                 android:layout_width="match_parent"
-                android:layout_height="160dp"
+                android:layout_height="140dp"
                 android:scaleType="fitXY" />
 
                 <TextView
@@ -44,7 +44,7 @@
                     android:textColor="@color/colorWhite"
                     android:textSize="16sp"
                     android:textStyle="bold"
-                    android:visibility="visible"></TextView>
+                    android:visibility="visible"/>
 
             </RelativeLayout>
 
@@ -55,12 +55,12 @@
                 android:layout_alignParentBottom="true"
                 android:layout_centerHorizontal="true"
                 android:layout_gravity="center"
-                android:layout_marginBottom="4dp"
-                android:fontFamily="sans-serif"
-                android:paddingLeft="4dp"
+                android:textStyle="bold"
+                android:layout_marginStart="10dp"
+                android:layout_marginEnd="10dp"
                 android:text="ABCD"
                 android:textColor="#000000"
-                android:textSize="18sp"></TextView>
+                android:textSize="16sp"></TextView>
 
             <TextView
                 android:id="@+id/adMenuPrice"
@@ -69,10 +69,13 @@
                 android:layout_alignParentBottom="true"
                 android:layout_centerHorizontal="true"
                 android:layout_gravity="center"
-                android:layout_marginBottom="10dp"
-                android:fontFamily="sans-serif-condensed-medium"
+                android:layout_marginStart="10dp"
+                android:layout_marginEnd="10dp"
+                android:layout_marginTop="2dp"
+                android:textStyle="bold"
+                android:textColor="#009664"
                 android:text="ABCD"
-                android:textSize="16sp"></TextView>
+                android:textSize="14sp"></TextView>
 
 
             <TextView
@@ -82,6 +85,7 @@
                 android:layout_alignParentBottom="true"
                 android:layout_centerHorizontal="true"
                 android:layout_gravity="center"
+                android:layout_marginTop="6dp"
                 android:layout_marginBottom="10dp"
                 android:fontFamily="sans-serif-medium"
                 android:text="ABCD"
