--- a/app/src/main/res/layout/fragment_home.xml
+++ b/app/src/main/res/layout/fragment_home.xml
@@ -12,103 +12,81 @@
 
     <androidx.cardview.widget.CardView
         android:layout_width="match_parent"
-        android:layout_height="60dp"
+        android:layout_height="50dp"
         app:cardElevation="9dp" >
 
     <LinearLayout
         android:layout_width="match_parent"
-        android:layout_height="60dp"
+        android:layout_height="match_parent"
         android:orientation="horizontal"
         android:baselineAligned="false">
 
         <LinearLayout
             android:layout_width="match_parent"
             android:layout_height="match_parent"
-            android:layout_weight="1"
+            android:padding="10dp"
             android:gravity="center"
             android:orientation="horizontal">
 
-
-            <ImageView
-                android:layout_width="20dp"
-                android:layout_height="20dp"
-                android:background="@drawable/ic_baseline_location_on_24"
-                android:contentDescription="@string/image"></ImageView>
-
-            <TextView
+            <Button
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
-                android:layout_marginStart="4dp"
+                android:layout_weight="1"
+                android:background="@color/colorWhite"
+                android:drawableStart="@drawable/ic_baseline_location_on_24"
                 android:fontFamily="serif"
+                android:paddingStart="16dp"
+                android:textColor="@color/colorBlack"
+                android:paddingEnd="16dp"
                 android:text="@string/menu_location"
-                android:textColor="#000000"
-                android:textSize="18sp"></TextView>
+                android:textAlignment="center"
+                android:textAllCaps="false"
+                android:textSize="16sp"
+                style="?android:attr/borderlessButtonStyle"/>
 
-
-        </LinearLayout>
-        <LinearLayout
-            android:layout_width="match_parent"
-            android:layout_height="match_parent"
-            android:layout_weight="1"
-            android:orientation="horizontal">
 
             <TextView
                 android:layout_width="1dp"
                 android:layout_gravity="center_vertical"
-                android:layout_marginEnd="20dp"
-                android:layout_height="34dp"
-                android:background="#66000000" ></TextView>
+                android:layout_marginStart="4dp"
+                android:layout_marginEnd="4dp"
+                android:layout_height="24dp"
+                android:background="#66000000" />
 
-            <ImageView
-                android:layout_width="20dp"
-                android:layout_height="20dp"
-                android:layout_gravity="center"
-                android:contentDescription="@string/image"
-                android:background="@drawable/ic_baseline_label_24"></ImageView>
-
-            <TextView
+            <Button
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
-                android:layout_gravity="center"
-                android:layout_marginStart="4dp"
+                android:layout_weight="1"
+                android:background="@color/colorWhite"
+                android:drawableStart="@drawable/ic_baseline_label_24"
                 android:fontFamily="serif"
-                android:gravity="center"
+                android:paddingStart="16dp"
+                android:textColor="@color/colorBlack"
+                android:paddingEnd="16dp"
                 android:text="@string/menu_category"
-                android:textColor="#000000"
-                android:textSize="18sp"></TextView>
-
-        </LinearLayout>
-        <LinearLayout
-            android:layout_width="match_parent"
-            android:layout_height="match_parent"
-            android:layout_weight="1"
-            android:orientation="horizontal">
+                android:textAlignment="center"
+                android:textAllCaps="false"
+                android:textSize="16sp"
+                style="?android:attr/borderlessButtonStyle"/>
 
             <TextView
                 android:layout_width="1dp"
                 android:layout_gravity="center_vertical"
-                android:layout_height="34dp"
-                android:layout_marginEnd="20dp"
+                android:layout_marginStart="4dp"
+                android:layout_marginEnd="4dp"
+                android:layout_height="24dp"
                 android:background="#66000000" />
 
             <ImageView
-                android:layout_width="20dp"
-                android:layout_height="20dp"
+                android:layout_marginStart="10dp"
+                android:layout_margin="10dp"
+                android:layout_width="30dp"
+                android:layout_height="30dp"
+                android:padding="10dp"
                 android:layout_gravity="center"
                 android:contentDescription="@string/image"
-                android:background="@drawable/ic_baseline_filter_list_24"
-                android:gravity="center"></ImageView>
-
-            <TextView
-                android:layout_width="wrap_content"
-                android:layout_height="wrap_content"
-                android:layout_gravity="center"
-                android:layout_marginStart="4dp"
-                android:fontFamily="serif"
-                android:gravity="center"
-                android:text="@string/menu_filter"
-                android:textColor="#000000"
-                android:textSize="18sp"></TextView>
+                android:background="@drawable/icon_filter_24"
+                android:gravity="center"/>
 
         </LinearLayout>
 
