--- a/app/src/main/res/layout/toolbar_home.xml
+++ b/app/src/main/res/layout/toolbar_home.xml
@@ -2,22 +2,21 @@
 <RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
     android:layout_width="match_parent"
     android:layout_height="wrap_content"
-    android:gravity="center"
     android:background="#00a884"
     android:orientation="vertical"
-    android:padding="4dp">
+    android:paddingTop="4dp">
 
     <LinearLayout
         android:id="@+id/homeMainRonicy"
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
-        android:gravity="center"
+        android:gravity="center_horizontal"
         android:orientation="horizontal">
 
 
         <ImageView
-            android:layout_width="30dp"
-            android:layout_height="30dp"
+            android:layout_width="20dp"
+            android:layout_height="20dp"
             android:background="@drawable/icon_logo_notification"
             android:contentDescription="@string/image" />
 
@@ -28,7 +27,7 @@
             android:fontFamily="serif"
             android:text="@string/app_name"
             android:textColor="@color/colorWhite"
-            android:textSize="26sp"
+            android:textSize="18sp"
             android:textStyle="bold"></TextView>
     </LinearLayout>
 
@@ -40,7 +39,7 @@
         android:layout_centerHorizontal="true"
         android:fontFamily="serif"
         android:textColor="@color/colorWhite"
-        android:textSize="16sp"></TextView>
+        android:textSize="14sp"></TextView>
 
     <!-- Manuka -->
 </RelativeLayout>
