manuka - otp services updated

--- a/app/src/main/res/layout/manuka_fragment_step2.xml
+++ b/app/src/main/res/layout/manuka_fragment_step2.xml
@@ -51,7 +51,7 @@ tools:context=".fragment.Order.Step2">
                     android:layout_marginBottom="4dp"
                     android:fontFamily="serif"
                     android:gravity="start"
-                    android:text="@string/orderDeliveryHeader"
+                    android:text="@string/loading"
                     android:textColor="@color/colorBlack"
                     android:textSize="16sp"
                     android:textStyle="bold"></TextView>
@@ -62,7 +62,7 @@ tools:context=".fragment.Order.Step2">
                     android:layout_height="wrap_content"
                     android:layout_marginBottom="4dp"
                     android:gravity="start"
-                    android:text="@string/orderDeliveryHeader"
+                    android:text="@string/loading"
                     android:textSize="16sp"></TextView>
 
                 <TextView
@@ -71,7 +71,7 @@ tools:context=".fragment.Order.Step2">
                     android:layout_height="wrap_content"
                     android:fontFamily="serif"
                     android:gravity="start"
-                    android:text="@string/orderDeliveryHeader"
+                    android:text="@string/loading"
                     android:textColor="#088F83"
                     android:textSize="16sp"
                     android:textStyle="bold"></TextView>
