--- a/app/src/main/res/layout/manuka_fragment_order_phone_verify.xml
+++ b/app/src/main/res/layout/manuka_fragment_order_phone_verify.xml
@@ -20,11 +20,12 @@
         android:textStyle="bold" />
 
     <TextView
+        android:id="@+id/order_phone_number"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:layout_gravity="center_horizontal"
-        android:text="@string/order_phone_number"
         android:textColor="@color/colorBlack"
+        android:text="@string/phone_number_unknown"
         android:textSize="16sp" />
 
     <ImageView
