--- a/app/src/main/res/layout/catergory_row.xml
+++ b/app/src/main/res/layout/catergory_row.xml
@@ -2,25 +2,26 @@
 <LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:app="http://schemas.android.com/apk/res-auto"
     android:layout_width="match_parent"
-    android:layout_height="80dp">
+    android:layout_height="70dp">
 
     <!-- Manuka -->
 
     <ImageView
         android:id="@+id/categoryImagePost"
-        android:paddingTop="20dp"
-        android:paddingBottom="20dp"
-        android:layout_width="80dp"
-        android:layout_height="80dp"
+        android:layout_gravity="center_vertical"
+        android:padding="8dp"
+        android:layout_width="40dp"
+        android:layout_height="40dp"
         app:srcCompat="@mipmap/ic_launcher" />
 
         <TextView
             android:id="@+id/categoryTitlePost"
             android:layout_width="match_parent"
             android:gravity="center_vertical"
-            android:layout_height="80dp"
-            android:text="zddsdsdsds"
-            android:textSize="20dp"
+            android:layout_height="match_parent"
+            android:paddingStart="4dp"
+            android:text="@string/loading"
+            android:textSize="16dp"
             android:textColor="#000000"></TextView>
 
 </LinearLayout>
