--- a/app/src/main/res/layout/fragment_new_post.xml
+++ b/app/src/main/res/layout/fragment_new_post.xml
@@ -11,7 +11,7 @@
     <!-- Manuka -->
 
     <androidx.core.widget.NestedScrollView
-        android:layout_width="wrap_content"
+        android:layout_width="match_parent"
         android:layout_height="wrap_content">
 
         <LinearLayout
@@ -27,36 +27,37 @@
                 android:layout_marginBottom="10dp"
                 android:background="#ffffff"
                 android:orientation="horizontal"
-                android:padding="20dp">
+                android:padding="10dp">
 
                 <ImageView
-                    android:layout_width="60dp"
-                    android:layout_height="60dp"
-                    android:layout_marginLeft="10dp"
-                    android:layout_marginRight="16dp"
-                    android:background="@drawable/ic_baseline_bookmarks_24"></ImageView>
+                    android:layout_width="50dp"
+                    android:layout_height="50dp"
+                    android:gravity="center_vertical"
+                    android:layout_margin="10dp"
+                    android:background="@drawable/icon_rules_medium"></ImageView>
 
                 <LinearLayout
                     android:layout_width="match_parent"
                     android:layout_height="wrap_content"
-                    android:layout_weight="0.5"
+                    android:layout_gravity="center_vertical"
                     android:orientation="vertical">
 
                     <TextView
                         android:layout_width="match_parent"
-                        android:layout_height="30dp"
-                        android:text="Your posting allowance"
+                        android:layout_height="wrap_content"
+                        android:text="@string/posting_allowance"
                         android:textAlignment="textStart"
                         android:textColor="#000000"
-                        android:textSize="18dp"></TextView>
+                        android:textStyle="bold"
+                        android:textSize="14dp"></TextView>
 
                     <TextView
                         android:layout_width="match_parent"
-                        android:layout_height="50dp"
-                        android:text="Learn about posting adds for free on AdEasy"
+                        android:layout_height="wrap_content"
+                        android:text="@string/free_on_ronicy"
                         android:textAlignment="textStart"
                         android:textColor="#b3b3b3"
-                        android:textSize="18dp"></TextView>
+                        android:textSize="14dp"></TextView>
                 </LinearLayout>
             </LinearLayout>
 
@@ -70,22 +71,22 @@
 
                 <TextView
                     android:layout_width="match_parent"
-                    android:layout_height="80dp"
-                    android:padding="18dp"
-                    android:text="All Categories"
-                    android:textAlignment="textStart"
+                    android:layout_height="70dp"
+                    android:paddingStart="18dp"
+                    android:gravity="center_vertical"
+                    android:text="@string/all_categories"
                     android:textColor="#b3b3b3"
-                    android:textSize="20dp"></TextView>
+                    android:textSize="16dp"></TextView>
 
                 <TextView
                     android:layout_width="match_parent"
-                    android:layout_height="80dp"
+                    android:paddingStart="18dp"
+                    android:layout_height="70dp"
+                    android:gravity="center_vertical"
                     android:background="#0066ff"
-                    android:padding="18dp"
-                    android:text="Sell an item or service"
-                    android:textAlignment="textStart"
+                    android:text="@string/sell_an_item"
                     android:textColor="#ffffff"
-                    android:textSize="20dp"></TextView>
+                    android:textSize="16dp"></TextView>
 
                 <androidx.recyclerview.widget.RecyclerView
                     android:id="@+id/CategoryListPost"
